[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/PlayBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/SideBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Main.gd" type="Script" id=3]

[node name="Main" type="MarginContainer"]
margin_right = 1080.0
margin_bottom = 720.0
rect_min_size = Vector2( 1080, 720 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 720.0
rect_min_size = Vector2( 1080, 720 )
size_flags_horizontal = 2
size_flags_vertical = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1080.0
margin_bottom = 720.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBoard" parent="MainHBoxContainer" instance=ExtResource( 1 )]
margin_bottom = 720.0

[node name="SideBoard" parent="MainHBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 904.0
margin_right = 1080.0
